--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>
             Eduardo Martins Gerhardt Pereira | WDD 130 
         </h1>
-        <img src="images/myprofile.png" alt="Hello, my name is Eduardo Gerhardt" width="200">
+        <img src="images/profile.jpg" alt="Hello, my name is Eduardo Gerhardt" width="200">
         <p>
             My name is Eduardo Martins Gerhardt Pereira. I am from Brazil and currently living in Idaho. I enjoy studying programming languages and have some knowledge in this area. I am married to my beautiful wife, Agatha.
         </p>
