--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eduardo Martins Gerhardt Pereira | WDD 130</title>
+    <meta name="Eduardo Gerhardt" content="Eduardo Gerhardt, WDD 130, Rafting Website">
+    <meta name="Eduardo Gerhardt" content="Eduardo Gerhardt">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-
-
-
 <body>
     <header>
         <nav>
@@ -24,12 +24,13 @@
             My name is Eduardo Martins Gerhardt Pereira. I am from Brazil and currently living in Idaho. I enjoy studying programming languages and have some knowledge in this area. I am married to my beautiful wife, Agatha.
         </p>
     </main>
+    <aside>
+        <h2>Brazil</h2>
+        <img src="images/brazil.jpg" alt="brazil">
+        <p>Brazil, the largest country in South America, is known for its vibrant culture, diverse ecosystems, and rich history. It is home to the Amazon Rainforest, the world's largest tropical rainforest, and the iconic Christ the Redeemer statue in Rio de Janeiro. Brazil is famous for its annual Carnival festival, which features lively parades, music, and dance. The country is also renowned for its passion for soccer, producing some of the world's greatest footballers.</p>
+    </aside>
     <footer>
         <p>©️2025 | Eduardo Gerhardt | Brazil </p>
     </footer>
 </body>
-
-
-
-
 </html>
