--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,6 +25,7 @@
       <img src="images/hero.jpg" alt="Rafting Adventure">
       <h1>Whitewater Rafting Co.</h1>
       <article>
+        <h2>Our Mission</h2>
         <img src="images/client.jpg" alt="Happy Client">
         <p>Our mission is to provide thrilling rafting experiences with safety and joy. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </article>
