--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,11 +12,14 @@
 <body>
   <header>
     <img src="images/logo.jpeg" alt="Rafting Site Logo">
+    <h1>Whitewater Rafting Co.</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="trips.html">Trips</a>
-      <a href="contact.html">Contact</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="trips.html">Trips</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -39,21 +42,37 @@
     <section class="adventure-section">
       <h2>Adventure Awaits You!</h2>
       <div class="adventure-images">
-        <img src="images/adventure1.jpg" alt="Adventure 1">
-        <img src="images/adventure2.jpg" alt="Adventure 2">
-        <img src="images/adventure3.jpg" alt="Adventure 3">
-        <img src="images/adventure4.jpg" alt="Adventure 4">
-        <img src="images/adventure5.jpg" alt="Adventure 5">
+        <figure>
+          <img src="images/adventure1.jpg" alt="Los Dientes del Diablo">
+          <figcaption>Los Dientes del Diablo</figcaption>
+        </figure>
+        <figure>
+          <img src="images/adventure2.jpg" alt="Big Mallard">
+          <figcaption>Big Mallard</figcaption>
+        </figure>
+        <figure>
+          <img src="images/adventure3.jpg" alt="Half Day Adventure">
+          <figcaption>Half Day Adventure</figcaption>
+        </figure>
+        <figure>
+          <img src="images/adventure4.jpg" alt="Rapid Rush">
+          <figcaption>Rapid Rush</figcaption>
+        </figure>
+        <figure>
+          <img src="images/adventure5.jpg" alt="The Churn">
+          <figcaption>The Churn</figcaption>
+        </figure>
       </div>
     </section>
-    
   </main>
 
   <footer>
     <p>&copy; 2025 Whitewater Rafting Co. | Eduardo Gerhardt</p>
-    <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-    <a href="#"><img src="images/twitter.jpg" alt="Twitter"></a>
-    <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
+    <div class="social-icons">
+      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="images/twitter.jpg" alt="Twitter"></a>
+      <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
+    </div>
   </footer>
 </body>
 </html>
